Using ArrayList instead of Deque - for simplification